--- a/index.html
+++ b/index.html
@@ -1,34 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="google-signin-client_id"
+      content="457598836460-cf9vr3l572av36bkrr9873emlcsma2r8.apps.googleusercontent.com"
+    />
+    <title>Signed uploading</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="google-signin-client_id" content="457598836460-cf9vr3l572av36bkrr9873emlcsma2r8.apps.googleusercontent.com">
-  <title>Signed uploading</title>
-  
-  
-</head>
+  <body>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 
-<body>
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <form>
+      <input type="text" name="file-name" id="name" placeholder="s" />
+      <input type="file" name="file" id="files" multiple placeholder="s" />
+      <button type="submit">Submit</button>
+    </form>
 
-  <form id="form">
-    <input type="text" name="file-name" id="name" placeholder="file">
-    <input type="file" name="file" id="files" multiple  placeholder="name">
-    <button type="submit">Submit</button>
-  </form>
+    <div>
+      <a
+        href="http://localhost:3000/api/google"
+        type="button"
+        class="login-with-google-btn"
+      >
+        Sign in with Google
+      </a>
+    </div>
 
-  <div ><a href="http://localhost:3000/api/google" type="button" class="login-with-google-btn" >
-    Sign in with Google
-  </a></div>
+    <div>
+      <a
+        href="http://localhost:3000/api/facebook"
+        type="button"
+        class="login-with-google-btn"
+      >
+        Sign in with facebook
+      </a>
+    </div>
 
-  <div ><a href="http://localhost:3000/api/facebook" type="button" class="login-with-google-btn" >
-    Sign in with facebook
-  </a></div>
-
-  <!-- <h2>Upload Files Using the Upload Widget</h2>
+    <!-- <h2>Upload Files Using the Upload Widget</h2>
   <p>Perform a signed upload using the upload widget.</p>
   <p>Click "Upload Files" to open the upload widget.</p>
   <div><button id="upload_widget" class="submit">Upload Files</button></div>
@@ -41,76 +53,67 @@
   
 
   cloudinary upload widget -->
-  <!-- <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script> -->
+    <!-- <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script> -->
 
-  <!-- local upload instantiation -->
-
-
-  
-</body>
-<script>
- 
-  document.addEventListener('DOMContentLoaded', function() {
-    const form = document.getElementById('form');
-
-    form.addEventListener('submit', function(event) {
-      event.preventDefault(); // Prevent the default form submission
-
-      const formData = new FormData(form);
+    <!-- local upload instantiation -->
+  </body>
+  <script>
+    const form = document.querySelector("form");
+    form.addEventListener("submit", (e) => {
+      e.preventDefault();
       // Prevents HTML handling submission
       const name = document.getElementById("name");
       const files = document.getElementById("files");
+      const formData = new FormData();
       // Creates empty formData object
       formData.append("name", name.value);
       // Appends value of text input
-      
       console.log(files)
-
-      formData.append("files", files);
-      console.log(1)
-      console.log(formData)
+      formData.append("files", files.files[0]);
+      formData.forEach((value, key) => {
+        console.log(key, value);
+      });
       // Appends value(s) of file input
       // Post data to Node and Express server:
-      fetch('http://localhost:3000/uploadMultipleImages', {
-          method: 'POST',
-          body: formData, // Payload is formData object
+      fetch("http://localhost:3000/api/uploadProfileImage", {
+        method: "PATCH",
+        body:formData,
+        headers: {
+          Authorization: `Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJJZCI6IjY0ZWM4YzNhODM1ZTJkM2Y5N2ExMWQwMSIsIk5hbWUiOiJ3ZWJHaG91bCIsImlhdCI6MTY5MzUxNzQwOCwiZXhwIjoxNjkzNjI1NDA4fQ.kemwQ2PQHTxJotBMDK-f0P90Ycg__o4cn0V2eLze8kA`,
+        },
       })
-      .then(res => res.json())
-      .then(data => console.log(data));
+        .then((res) => res.json())
+        .then((data) => console.log(data));
     });
-  });
+    //   document.addEventListener('DOMContentLoaded', async () => {
+    //   const response = await fetch('http://localhost:3000/api/signuploadwidget');
+    //   const data = await response.json();
 
+    //   const options = {
+    //     cloudName: data.cloudname,
+    //     apiKey: data.apikey,
+    //     uploadSignatureTimestamp: data.timestamp,
+    //     uploadSignature: data.signature,
+    //     cropping: false,
+    //     folder: 'signed_upload_demo_uw'
+    //   }
 
-//   document.addEventListener('DOMContentLoaded', async () => {
-//   const response = await fetch('http://localhost:3000/api/signuploadwidget');
-//   const data = await response.json();
+    //   const processResults = (error, result) => {
+    //     if (!error && result && result.event === 'success') {
+    //       console.log(result)
 
-//   const options = {
-//     cloudName: data.cloudname,
-//     apiKey: data.apikey,
-//     uploadSignatureTimestamp: data.timestamp,
-//     uploadSignature: data.signature,
-//     cropping: false,
-//     folder: 'signed_upload_demo_uw'
-//   }
+    //       var str = JSON.stringify(result, null, 4);
+    //       document.getElementById("uwdata").innerHTML += str;
+    //     }
+    //   }
 
-//   const processResults = (error, result) => {
-//     if (!error && result && result.event === 'success') {
-//       console.log(result)
-      
-//       var str = JSON.stringify(result, null, 4);
-//       document.getElementById("uwdata").innerHTML += str;
-//     }
-//   }
-
-//   const myWidget = window.cloudinary.createUploadWidget(
-//     options,
-//     processResults
-//   )
-//   document
-//     .getElementById('upload_widget')
-//     .addEventListener('click', () => myWidget.open(), false)
-// })
-
-</script>
+    //   const myWidget = window.cloudinary.createUploadWidget(
+    //     options,
+    //     processResults
+    //   )
+    //   document
+    //     .getElementById('upload_widget')
+    //     .addEventListener('click', () => myWidget.open(), false)
+    // })
+  </script>
 </html>
