changing some urls

--- a/index.html
+++ b/index.html
@@ -24,15 +24,14 @@
         Sign in with Google
       </a>
     </div>
+    <div>
+      <a href="https://www.linkedin.com/oauth/v2/authorization?response_type=code&client_id=77pvrp0ctq9az2&redirect_uri=http://localhost:3000/api/auth/linkedin/callback&scope=openid%20profile%20email">
+        Sign in with LinkedIn
+      </a>
+    </div>
 
     <div>
-      <a
-        href="http://localhost:3000/api/facebook"
-        type="button"
-        class="login-with-google-btn"
-      >
-        Sign in with facebook
-      </a>
+      <a href="http://localhost:3000/api/login/facebook" class="button">Log In With Facebook</a>
     </div>
     <object
       data="../../../../webGhoul_CV.pdf"
